--- a/MyDailyPal/View/Base.lproj/Main.storyboard
+++ b/MyDailyPal/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wlA-He-WXO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aLD-Bd-Xg6">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -27,14 +27,14 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mCH-Me-dp4">
                                 <rect key="frame" x="0.0" y="35" width="375" height="161"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.83792954704724076" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zX3-yD-s5G">
-                                <rect key="frame" x="0.0" y="196" width="375" height="471"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zX3-yD-s5G">
+                                <rect key="frame" x="0.0" y="278" width="375" height="389"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="shY-4k-why">
@@ -43,10 +43,6 @@
                                 <state key="normal" title="NEXT">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
-                                <connections>
-                                    <action selector="NextButtonToScreen10:" destination="wlA-He-WXO" eventType="touchUpInside" id="ZjD-va-aVX"/>
-                                    <action selector="ToScreen10:" destination="wlA-He-WXO" eventType="touchUpInside" id="xi2-Js-7BI"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gMl-qG-to3">
                                 <rect key="frame" x="16" y="8" width="40" height="30"/>
@@ -54,15 +50,18 @@
                                 <state key="normal" title="BACK">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
-                                <connections>
-                                    <action selector="BackButtonToScreen8:" destination="wlA-He-WXO" eventType="touchUpInside" id="YJ7-Sw-im4"/>
-                                    <action selector="ToScreen8:" destination="wlA-He-WXO" eventType="touchUpInside" id="bET-q9-mUP"/>
-                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Setup New Treatment" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T8c-ng-Az4">
                                 <rect key="frame" x="77" y="13" width="220" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oah-C1-oxD">
+                                <rect key="frame" x="0.0" y="195" width="375" height="65"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -72,9 +71,10 @@
                     </view>
                     <navigationItem key="navigationItem" id="FGa-LP-FsU"/>
                     <connections>
-                        <outlet property="SetuoNewTreatmentLabel" destination="T8c-ng-Az4" id="oyW-eF-sZN"/>
-                        <outlet property="medicineDescription" destination="zX3-yD-s5G" id="Ojy-id-XWy"/>
-                        <outlet property="staticImageView" destination="mCH-Me-dp4" id="JBF-Lw-2UO"/>
+                        <outlet property="DrugNameLabel" destination="oah-C1-oxD" id="m5j-ml-kbo"/>
+                        <outlet property="SetupNewTreatmentLabel" destination="T8c-ng-Az4" id="Dg5-PE-B79"/>
+                        <outlet property="medicineTextView" destination="zX3-yD-s5G" id="HM4-Qq-jxq"/>
+                        <outlet property="staticImageView" destination="mCH-Me-dp4" id="jbj-8c-u2r"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0nO-Dt-bzm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -218,7 +218,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="heg-l0-O0a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1972" y="482.60869565217394"/>
+            <point key="canvasLocation" x="2311.1999999999998" y="482.60869565217394"/>
         </scene>
         <!--ForgotPIN View Controller-->
         <scene sceneID="YkK-hg-Zhn">
@@ -311,7 +311,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8AH-lk-guT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3936.8000000000002" y="543.77811094452773"/>
+            <point key="canvasLocation" x="4276" y="542.87856071964018"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -473,7 +473,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="548-wJ-QmF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1972" y="1186.9565217391305"/>
+            <point key="canvasLocation" x="2311.1999999999998" y="1186.9565217391305"/>
         </scene>
         <!--Title-->
         <scene sceneID="dgr-tl-aQA">
@@ -1035,7 +1035,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mhW-fP-drE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6748" y="1456.8215892053975"/>
+            <point key="canvasLocation" x="7087.1999999999998" y="1456.8215892053975"/>
         </scene>
         <!--My Treatment Plan-->
         <scene sceneID="71E-jk-woD">
@@ -1487,7 +1487,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mm2-aU-PV9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="568.79999999999995" y="1186.9565217391305"/>
+            <point key="canvasLocation" x="908" y="1186.9565217391305"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="3tV-Fx-Ozd">
@@ -1548,7 +1548,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rdC-je-QMt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5329" y="2238"/>
+            <point key="canvasLocation" x="5650" y="2312"/>
         </scene>
         <!--Setup New Treatment-->
         <scene sceneID="9MB-7G-jee">
@@ -1558,36 +1558,9 @@ tapping PIN.</string>
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="GUb-1e-PhL">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="57"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Setup New Treatment" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CpK-wy-cJq">
-                                    <rect key="frame" x="77" y="18" width="220" height="21"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NHC-bO-tcq">
-                                    <rect key="frame" x="0.0" y="13" width="49" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <state key="normal" title="BACK">
-                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="NavigateToScreen4:" destination="viy-TQ-tDL" eventType="touchUpInside" id="20m-Yn-uBW"/>
-                                        <action selector="ToScreen4:" destination="viy-TQ-tDL" eventType="touchUpInside" id="QQU-J7-ltj"/>
-                                        <segue destination="AXT-cV-4Ah" kind="show" id="dFZ-vU-C3e"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="DrugsTableViewCell" rowHeight="60" id="nl8-eg-eVL" customClass="DrugsTableViewCell" customModule="MyDailyPal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="85" width="375" height="60"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nl8-eg-eVL" id="0lk-yf-HI8">
                                     <rect key="frame" x="0.0" y="0.0" width="342" height="59.5"/>
@@ -1633,14 +1606,12 @@ tapping PIN.</string>
                     </tableView>
                     <navigationItem key="navigationItem" title="Setup New Treatment" id="K5f-3k-KBW"/>
                     <connections>
-                        <outlet property="labelSetupNewTreatment" destination="CpK-wy-cJq" id="WE5-Hi-Syh"/>
-                        <segue destination="wlA-He-WXO" kind="push" identifier="PushMedicineSegue" id="Iqg-1L-8Xx"/>
                         <segue destination="aLD-Bd-Xg6" kind="show" identifier="ToScreen10Segue" id="GnT-Ia-FlT"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x3u-ie-T4w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-607" y="940"/>
+            <point key="canvasLocation" x="-268" y="939.58020989505258"/>
         </scene>
         <!--Screen10 View Controller-->
         <scene sceneID="geX-Ty-IMi">
@@ -1866,7 +1837,7 @@ tapping PIN.</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9r2-Hk-eAv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5720.8000000000002" y="1491.0044977511245"/>
+            <point key="canvasLocation" x="6060" y="1491.0044977511245"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uC7-WZ-7km">
@@ -1886,6 +1857,24 @@ tapping PIN.</string>
             </objects>
             <point key="canvasLocation" x="3419.1999999999998" y="2238.08095952024"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qTw-yX-AEa">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Xpl-T4-JaI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mah-Dr-H2z">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="viy-TQ-tDL" kind="relationship" relationship="rootViewController" id="yuz-di-jIO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BYb-mg-r77" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1084" y="1352"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Loading-welcome screen image" width="3333" height="5000"/>
@@ -1900,7 +1889,7 @@ tapping PIN.</string>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="a2N-mc-jF8"/>
-        <segue reference="dFZ-vU-C3e"/>
+        <segue reference="etm-qG-yWj"/>
         <segue reference="0Hx-nR-LbK"/>
     </inferredMetricsTieBreakers>
 </document>
