change on storyboard

--- a/MyDailyPal/View/Base.lproj/Main.storyboard
+++ b/MyDailyPal/View/Base.lproj/Main.storyboard
@@ -2333,8 +2333,8 @@ tapping PIN.</string>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="dlp-wf-iWd"/>
-        <segue reference="a2N-mc-jF8"/>
-        <segue reference="etO-aC-p2M"/>
+        <segue reference="rcD-LN-hkq"/>
+        <segue reference="GCy-I1-OTQ"/>
         <segue reference="0Hx-nR-LbK"/>
     </inferredMetricsTieBreakers>
 </document>
