--- a/MyDailyPal/View/Base.lproj/Main.storyboard
+++ b/MyDailyPal/View/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="86h-et-D04">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -1298,7 +1298,7 @@ tapping PIN.</string>
                                 </constraints>
                             </imageView>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S4g-bf-iOq">
-                                <rect key="frame" x="309" y="390" width="52" height="30"/>
+                                <rect key="frame" x="309" y="389.5" width="52" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="IUD-Ss-H6Z"/>
                                     <constraint firstAttribute="height" constant="30" id="XSz-LM-oxw"/>
@@ -1324,7 +1324,7 @@ tapping PIN.</string>
                                 </state>
                             </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jgh-g3-aqU">
-                                <rect key="frame" x="309" y="440" width="52" height="30"/>
+                                <rect key="frame" x="309" y="439.5" width="52" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="QVM-BK-hFc"/>
                                     <constraint firstAttribute="width" constant="50" id="iTk-sl-eC0"/>
@@ -2045,6 +2045,7 @@ tapping PIN.</string>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Setup New Treatment" id="K5f-3k-KBW"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <segue destination="aLD-Bd-Xg6" kind="show" identifier="ToScreen10Segue" id="GnT-Ia-FlT"/>
                     </connections>
@@ -2171,6 +2172,7 @@ tapping PIN.</string>
                                 </state>
                                 <connections>
                                     <action selector="backButtonPressed:" destination="Ciw-vD-vL3" eventType="touchUpInside" id="EvE-Nr-6Ew"/>
+                                    <action selector="next:" destination="aLD-Bd-Xg6" eventType="touchUpInside" id="2S9-Lf-0fV"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Setup New Treatment " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uju-wm-DRP">
@@ -2240,6 +2242,7 @@ tapping PIN.</string>
                         <outlet property="timePicker" destination="Hnf-2u-clK" id="OtR-3i-dX8"/>
                         <outlet property="timePickerBackground" destination="Rna-DS-Xio" id="7Wb-CB-U6m"/>
                         <outlet property="transparentBackgound" destination="KLe-PQ-2ln" id="pk4-5o-RJJ"/>
+                        <segue destination="tM6-5p-iul" kind="show" identifier="tomytreatment" id="j5J-h6-Oai"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="snz-En-jA5" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2333,8 +2336,9 @@ tapping PIN.</string>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="dlp-wf-iWd"/>
-        <segue reference="a2N-mc-jF8"/>
-        <segue reference="etO-aC-p2M"/>
+        <segue reference="rcD-LN-hkq"/>
+        <segue reference="AAy-rd-YxM"/>
+        <segue reference="j5J-h6-Oai"/>
         <segue reference="0Hx-nR-LbK"/>
     </inferredMetricsTieBreakers>
 </document>
